# xdr-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: xdr-test.c  xdr-test.rs
src/: lib.rs  xdr.rs
